@@ -13,6 +13,7 @@
 									Replace Arduino code with esp-idf
 									Add option to enable / disable LoRaWAN or P2P mode
 									Add ADR support to LoRaWAN driver
+									Add power down options in LoRaWAN mode
 									Code refractoring
 									Update documentation
 									Update CHANGELOG
